manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: tacichiropipelinesjavascriptdocker
spec:
    type: ClusterIP
    ports:
    - port: 8080 
    selector:
        app: tacichiropipelinesjavascriptdocker
