manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tacichiropipelinesjavascriptdocker
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tacichiropipelinesjavascriptdocker.hinoaks.tachikawa.ga
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tacichiropipelinesjavascriptdocker
            port:
              number: 8080
